# GraphShield

./: README.md
graphshield/: .env.example  .gitignore  README.md  api_server.py  json  pyproject.toml  render.yaml  requirements.txt  setup.cfg
graphshield/.github/workflows/: graphshield.yml
graphshield/dashboard/: index 2.html  index.html  package-lock.json  package.json  vite.config.ts
graphshield/dashboard/src/: App.tsx  ai.ts  api.ts  demoData.ts  index.css  types.ts  utils.ts
graphshield/dashboard/src/components/: AIChatPanel.tsx  AIExplainerPanel.tsx  AIPatchPanel.tsx  AISecuritySummary.tsx  AttackPathViewer.tsx  DependencyGraph.tsx  Header.tsx  PRDescriptionGenerator.tsx  PatchSet.tsx  RiskChart.tsx  SCCPanel.tsx  StatsRow.tsx  UI.tsx  UploadZone.tsx  VulnTable.tsx
graphshield/docs/: ALGORITHMS.md  ARCHITECTURE.md
graphshield/graphshield/: __init__.py  config.py  exceptions.py
graphshield/graphshield/agents/: __init__.py  patch_agent.py  watchdog_agent.py
graphshield/graphshield/algorithms/: __init__.py  blast_radius.py  steiner_tree.py  tarjan_scc.py
graphshield/graphshield/cli/: __init__.py  main.py
graphshield/graphshield/core/: avl_tree.py  bloom_filter.py  dag_builder.py  manifest_parser.py  scanner.py
graphshield/graphshield/data/: __init__.py  nvd_ingestion.py
graphshield/tests/: conftest.py  test_avl_tree.py  test_blast_radius.py  test_bloom_filter.py  test_dag_builder.py  test_manifest_parser.py  test_steiner_tree.py  test_tarjan_scc.py
